@@ -1,4 +1,8 @@
 2007-03-13  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
+	* src/Editors/_EditPlace.py (_setup_fields): validate coordinates
+	* src/glade/gramps.glade: delete long, lat entries from place_editor
+
+2007-03-13  Zsolt Foldvari  <zfoldvar@users.sourceforge.net>
 	* src/RelLib/_Note.py: import const from MarkupText module
 	* src/MarkupText.py: use actions instead of widgets on the interface;
 	new helper functions
